--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
 {% block contents %}
-    Hello home!
+    <div class="w3-container">
+        <p>Hello home!</p>
+    </div>
 {% endblock %}
