--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load msg_w3_class %}
 
 <!doctype html>
 <html lang="en">
@@ -32,8 +33,8 @@
 <body>
 <div class="w3-container page-box">
 {% block header %}
-<header class="w3-container">
-    <div id="announcement-bar"> Announcement bar </div>
+<header class="w3-container flat">
+    <div id="announcement-bar"><p>Announcement bar</p></div>
     <div id="info-header-bar"> Login | Notifications | Cart </div>
     <div id="search-bar"> LOGO | Search Box | Search Button</div>
 
@@ -42,7 +43,13 @@
 
 <!-- messages -->
 {% if messages %}
-    <div class="w3-container">Messages</div>
+    <div class="w3-container flat">
+        {% for message in messages %}
+            <div class="w3-container {{ message.level_tag | msg_w3_class }} w3-center flat">
+              <p>{{ message }}</p>
+            </div>
+        {% endfor %}
+    </div>
 {%  endif %}
 <!-- end messages -->
 
