--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,9 +1,10 @@
-{% extends "account/base_entrance.html" %}
+{% extends "base.html" %}
 {% load allauth i18n %}
 {% block head_title %}
     {% trans "Signup" %}
 {% endblock head_title %}
-{% block content %}
+{% block contents %}
+    <div class="allauth-page">
     {% element h1 %}
         {% trans "Sign Up" %}
     {% endelement %}
@@ -26,9 +27,11 @@
                 {{ redirect_field }}
             {% endslot %}
             {% slot actions %}
+                <div class="allauth-submit-button-wrapper">
                 {% element button tags="prominent,signup" type="submit" %}
                     {% trans "Sign Up" %}
                 {% endelement %}
+                </div>
             {% endslot %}
         {% endelement %}
     {% endif %}
@@ -42,4 +45,5 @@
     {% if SOCIALACCOUNT_ENABLED %}
         {% include "socialaccount/snippets/login.html" with page_layout="entrance" %}
     {% endif %}
-{% endblock content %}
+    </div>
+{% endblock contents %}
