--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,10 +1,11 @@
-{% extends "account/base_entrance.html" %}
+{% extends "base.html" %}
 {% load i18n %}
 {% load allauth account %}
 {% block head_title %}
     {% trans "Sign In" %}
 {% endblock head_title %}
-{% block content %}
+{% block contents %}
+    <div class="allauth-page">
     {% element h1 %}
         {% trans "Sign In" %}
     {% endelement %}
@@ -27,9 +28,11 @@
                 {{ redirect_field }}
             {% endslot %}
             {% slot actions %}
-                {% element button type="submit" tags="prominent,login" %}
-                    {% trans "Sign In" %}
-                {% endelement %}
+                <div class="allauth-submit-button-wrapper">
+                    {% element button type="submit" tags="prominent,login" %}
+                        {% trans "Sign In" %}
+                    {% endelement %}
+                </div>
             {% endslot %}
         {% endelement %}
     {% endif %}
@@ -52,7 +55,8 @@
     {% if SOCIALACCOUNT_ENABLED %}
         {% include "socialaccount/snippets/login.html" with page_layout="entrance" %}
     {% endif %}
-{% endblock content %}
+    </div>
+{% endblock contents %}
 {% block extra_body %}
     {{ block.super }}
     {% if PASSKEY_LOGIN_ENABLED %}
