--- a/templates/main/search_result.html
+++ b/templates/main/search_result.html
@@ -2,6 +2,6 @@
 
 {% block contents %}
     <div class="w3-container">
-        <h1>Hello home!</h1>
+        <h1>Search Result!</h1>
     </div>
 {% endblock %}
