--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,11 @@
             display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&
             display=swap" rel="stylesheet">
+
+        <link href="{% static 'fontawesomefree/css/fontawesome.css' %}" rel="stylesheet" type="text/css">
+        <link href="{% static 'fontawesomefree/css/brands.css' %}" rel="stylesheet" type="text/css">
+        <link href="{% static 'fontawesomefree/css/solid.css' %}" rel="stylesheet" type="text/css">
+
     {% endblock fonts %}
 
     {% block corecss %}
@@ -42,19 +47,40 @@
 <div class="w3-container page-box">
 {% block header %}
 <header class="w3-container flat">
-    <div id="announcement-bar"><p>Free delivery on orders over £50</p></div>
-    <div id="info-header-bar">
-        <p>
-            {% if request.user.is_authenticated %}
-                <a href="{% url 'account_logout' %}">Logout</a>
-            {% else %}
-                <a href="{% url 'account_login' %}">Login</a>
-                <a href="{% url 'account_signup' %}">Register</a>
-        {% endif %}
-        | Notifications | Cart
-        </p>
+    <div id="announcement-bar" class="w3-row">
+        <div class="w3-col l9 m8 s7">
+            <p>Free delivery on orders over £50</p>
+        </div>
+        <div class="w3-col l3 m4 s5">
+            <div class="w3-right">
+                <p>
+                    {% if request.user.is_authenticated %}
+                        Greetings, {{ request.user }}! <a href="{% url 'account_logout' %}">Logout</a>
+                    {% else %}
+                        <a href="{% url 'account_login' %}">Login</a> /
+                        <a href="{% url 'account_signup' %}">Register</a>
+                    {% endif %}
+                </p>
+            </div>
+        </div>
     </div>
-    <div id="search-bar"><p> LOGO | Search Box | Search Button </p></div>
+    <div id="info-header-bar" class="w3-row">
+        <div class="w3-col l2 m2 s2 wrapper-in-header">
+            <span class="w3-badge logo w3-align-left">WS</span>
+        </div>
+        <div class="w3-center w3-col l9 m9 s9 wrapper-in-header">
+                <form action="{% url 'search' %}" method="get" class="wrapper-in-header" id="header-search">
+                    <input type="text" value="{{ search_criteria }}" minlength="3" id="top_search"
+                           name="q" placeholder="Search ...">
+                    <button type="submit"><i class="fa fa-search search-button"></i></button>
+                </form>
+        </div>
+        <div class="w3-col l1 m1 s1 w3-right wrapper-in-header">
+            <div class="w3-right wrapper-in-header" id="bell-and-basket-wrapper">
+                <i class="fa-regular fa-bell notifications-bell"></i> <i class="fa-solid fa-cart-shopping basket"></i>
+            </div>
+        </div>
+    </div>
 
 </header>
 {% endblock %}
