Add Full name logo

--- a/templates/base.html
+++ b/templates/base.html
@@ -65,10 +65,10 @@
         </div>
     </div>
     <div id="info-header-bar" class="w3-row">
-        <div class="w3-col l2 m2 s2 wrapper-in-header">
-            <span class="w3-badge logo w3-align-left">WS</span>
+        <div class="w3-col l2 m3 s4 wrapper-in-header">
+            <span class="w3-badge logo w3-align-left">&nbsp;&nbsp;Wonder&nbsp;&nbsp;<br/>Shop</span>
         </div>
-        <div class="w3-center w3-col l9 m9 s9 wrapper-in-header">
+        <div class="w3-center w3-col l9 m8 s6 wrapper-in-header">
                 <form action="{% url 'search' %}" method="get" class="wrapper-in-header" id="header-search">
                     <input type="text" value="{{ search_criteria }}" minlength="3" id="top_search"
                            name="q" placeholder="Search ...">
