--- a/templates/da_base.html
+++ b/templates/da_base.html
@@ -95,6 +95,10 @@
 </header>
 {% endblock %}
 
+    <!-- main menu -->
+{% include 'dataadmin/snippets/main_menu.html' %}
+<!-- eof main menu -->
+
 <!-- messages -->
 {% if messages %}
     <div class="w3-container flat">
